--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -235,4 +235,6 @@
     <string name="otto_title">Otto (Ávykiø sàraðams)</string>
     <string name="photoview_title">PhotoView (judanèiø paveiksliukø didinimui)</string>
     <string name="pattern_title">PatternLockView (pattern protection)</string>
+    <string name="reprint_title">Reprint (fingerprint protection)</string>
+    <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
 </resources>
