--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -236,4 +236,6 @@
     <string name="otto_title">Otto (händelsebuss)</string>
     <string name="photoview_title">PhotoView (zoombara GIF-bilder)</string>
     <string name="pattern_title">PatternLockView (mönsterlås)</string>
+    <string name="reprint_title">Reprint (fingerprint protection)</string>
+    <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
 </resources>
