--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -236,4 +236,6 @@
     <string name="otto_title">Otto (イベントバス)</string>
     <string name="photoview_title">PhotoView (GIF画像のズーム表示)</string>
     <string name="pattern_title">PatternLockView (パターン認証)</string>
+    <string name="reprint_title">Reprint (fingerprint protection)</string>
+    <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
 </resources>
