--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -240,4 +240,6 @@
     <string name="otto_title">Otto (event bus)</string>
     <string name="photoview_title">PhotoView (przybliżanie GIFów)</string>
     <string name="pattern_title">PatternLockView (ochrona plików wzorem)</string>
+    <string name="reprint_title">Reprint (fingerprint protection)</string>
+    <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
 </resources>
