--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -234,6 +234,8 @@
     <string name="joda_title">Joda-Time (sustituto para Java date)</string>
     <string name="stetho_title">Stetho (depuração a bases de dados)</string>
     <string name="otto_title">Otto (canal de eventos)</string>
-    <string name="photoview_title">PhotoView (animação de gifs)</string>
+    <string name="photoview_title">PhotoView (animação de GIFs)</string>
     <string name="pattern_title">PatternLockView (pattern protection)</string>
+    <string name="reprint_title">Reprint (fingerprint protection)</string>
+    <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
 </resources>
