--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -238,6 +238,8 @@
     <string name="joda_title">Joda-Time (náhrada dátumov v Jave)</string>
     <string name="stetho_title">Stetho (odladenie databáz)</string>
     <string name="otto_title">Otto (event bus)</string>
-    <string name="photoview_title">PhotoView (priblížiteľné gifká)</string>
+    <string name="photoview_title">PhotoView (priblížiteľné GIFká)</string>
     <string name="pattern_title">PatternLockView (ochrana vzorom)</string>
+    <string name="reprint_title">Reprint (ochrana odtlačkom prsta)</string>
+    <string name="gif_drawable_title">Gif Drawable (zobrazovanie GIF)</string>
 </resources>
