--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -138,6 +138,7 @@
     <string name="unhide_folder">Odkryť priečinok</string>
     <string name="temporarily_show_hidden">Dočasne zobraziť skryté</string>
     <string name="stop_showing_hidden">Ukončiť zobrazovanie skrytých médií</string>
+    <string name="maximum_share_reached">Nemôžete zdieľať toľko obsahu naraz</string>
 
     <!-- Sorting -->
     <string name="sort_by">Zoradiť podľa</string>
