--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -137,6 +137,7 @@
     <string name="unhide_folder">取消隐藏文件夹</string>
     <string name="temporarily_show_hidden">显示／隐藏缓存内容</string>
     <string name="stop_showing_hidden">不显示隐藏的媒体文件</string>
+    <string name="maximum_share_reached">You cannot share this much content at once</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
