--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -137,6 +137,7 @@
     <string name="unhide_folder">Unhide folder</string>
     <string name="temporarily_show_hidden">Temporarily show hidden</string>
     <string name="stop_showing_hidden">Stop showing hidden media</string>
+    <string name="maximum_share_reached">You cannot share this much content at once</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sort by</string>
