--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -137,6 +137,7 @@
     <string name="unhide_folder">フォルダーを再表示</string>
     <string name="temporarily_show_hidden">非表示の項目を一時的に表示</string>
     <string name="stop_showing_hidden">非表示項目を表示しない</string>
+    <string name="maximum_share_reached">You cannot share this much content at once</string>
 
     <!-- Sorting -->
     <string name="sort_by">並び替え</string>
