--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -137,6 +137,7 @@
     <string name="unhide_folder">Reexibir pasta</string>
     <string name="temporarily_show_hidden">Mostrar pastas ocultas temporariamente</string>
     <string name="stop_showing_hidden">Parar de exibir mídia oculta</string>
+    <string name="maximum_share_reached">You cannot share this much content at once</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
