--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -137,7 +137,7 @@
     <string name="unhide_folder">Map tonen</string>
     <string name="temporarily_show_hidden">Verborgen items tonen</string>
     <string name="stop_showing_hidden">Verborgen items niet tonen</string>
-    <string name="maximum_share_reached">You cannot share this much content at once</string>
+    <string name="maximum_share_reached">Te veel om in een keer te delen</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorteren op</string>
