adding 2 new strings

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Berechtigung zum Zugriff auf Speicher erforderlich</string>
     <string name="out_of_memory_error">Fehler: Zuwenig Speicher</string>
     <string name="an_error_occurred">Es ist ein Fehler aufgetreten: %s</string>
+    <string name="open_with">Öffnen mit</string>
+    <string name="no_app_found">Keine passende App gefunden</string>
 
     <!-- Renaming -->
     <string name="rename_file">Datei umbenennen</string>
