--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Necesitamos permiso para acceder a su almacenamiento</string>
     <string name="out_of_memory_error">Error: sin memoria</string>
     <string name="an_error_occurred">Un error ocurrió: %s</string>
+    <string name="open_with">Abrir con</string>
+    <string name="no_app_found">No se encontró una aplicación válida</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renombrar archivo</string>
