--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Nous avons besoin de la permission d\'accéder à votre stockage</string>
     <string name="out_of_memory_error">Erreur excès de mémoire</string>
     <string name="an_error_occurred">Une erreur est survenue: %s</string>
+    <string name="open_with">Ouvrir avec</string>
+    <string name="no_app_found">Aucune application valide trouvée</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renommer le fichier</string>
