--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">È necessaria l\'autorizzazione per l\'accesso all\'archiviazione</string>
     <string name="out_of_memory_error">Errore memoria esaurita</string>
     <string name="an_error_occurred">Si è verificato un errore: %s</string>
+    <string name="open_with">Apri con</string>
+    <string name="no_app_found">Nessun app valida trovata</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rinomina file</string>
