--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">ストレージにアクセスする権限が必要です</string>
     <string name="out_of_memory_error">メモリー不足エラー</string>
     <string name="an_error_occurred">エラーが発生しました: %s</string>
+    <string name="open_with">別のアプリで開く</string>
+    <string name="no_app_found">有効なアプリが見つかりません</string>
 
     <!-- Renaming -->
     <string name="rename_file">ファイルの名前を変更</string>
