--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Permissie nodig om opslag te benaderen</string>
     <string name="out_of_memory_error">Onvoldoende geheugen</string>
     <string name="an_error_occurred">Fout opgetreden: %s</string>
+    <string name="open_with">Openen met</string>
+    <string name="no_app_found">Geen app gevonden om dit bestand mee te openen</string>
 
     <!-- Renaming -->
     <string name="rename_file">Bestand hernoemen</string>
