--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Necessitamos de permissão para acessar o armazenamento</string>
     <string name="out_of_memory_error">Memória insuficiente</string>
     <string name="an_error_occurred">Um erro ocorreu: %s</string>
+    <string name="open_with">Abrir com</string>
+    <string name="no_app_found">Nenhum aplicativo encontrado</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renomear arquivo</string>
