--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Necessitamos de permissão para aceder ao armazenamento</string>
     <string name="out_of_memory_error">Memória insuficiente</string>
     <string name="an_error_occurred">Ocorreu um erro: %s</string>
+    <string name="open_with">Abrir com</string>
+    <string name="no_app_found">Nenhuma aplicação encontrada</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renomear ficheiro</string>
