--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -2,12 +2,14 @@
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
     <string name="search">Поиск</string>
-    <string name="save_as">Сохранить как...</string>
+    <string name="save_as">Сохранить как</string>
     <string name="file_saved">Файл успешно сохранён</string>
     <string name="invalid_file_format">Недопустимый формат файла</string>
     <string name="no_storage_permissions">Нужно разрешение для доступа к памяти</string>
     <string name="out_of_memory_error">Память переполнена</string>
     <string name="an_error_occurred">Произошла ошибка: %s</string>
+    <string name="open_with">Открыть в</string>
+    <string name="no_app_found">Приложение не найдено</string>
 
     <!-- Renaming -->
     <string name="rename_file">Изменение имени файла</string>
@@ -27,8 +29,8 @@
     <string name="copy">Копировать</string>
     <string name="move">Переместить</string>
     <string name="copy_move">Копировать/переместить</string>
-    <string name="copy_to">Копировать в...</string>
-    <string name="move_to">Переместить в...</string>
+    <string name="copy_to">Копировать в</string>
+    <string name="move_to">Переместить в</string>
     <string name="source">Путь источника</string>
     <string name="destination">Путь назначения</string>
     <string name="select_destination">Выберите путь назначения</string>
