--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Je potrebný prístup k súborom</string>
     <string name="out_of_memory_error">Došlo k chybe s nedostatkom pamäte</string>
     <string name="an_error_occurred">Došlo k chybe: %s</string>
+    <string name="open_with">Otvoriť pomocou</string>
+    <string name="no_app_found">Nenašla sa žiadna vhodná aplikácia</string>
 
     <!-- Renaming -->
     <string name="rename_file">Premenovať súbor</string>
