--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Vi behöver behörigheten för att komma åt ditt lagringsutrymme</string>
     <string name="out_of_memory_error">Minnet är fullt</string>
     <string name="an_error_occurred">Ett fel har uppstått: %s</string>
+    <string name="open_with">Öppna med</string>
+    <string name="no_app_found">Hittade ingen giltig app</string>
 
     <!-- Renaming -->
     <string name="rename_file">Döp om fil</string>
