--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">We need the permission to access your storage</string>
     <string name="out_of_memory_error">Yetersiz bellek hatası</string>
     <string name="an_error_occurred">Bir hata oluştu: %s</string>
+    <string name="open_with">Bununla aç</string>
+    <string name="no_app_found">Geçerli bir uygulama bulunamadı</string>
 
     <!-- Renaming -->
     <string name="rename_file">Dosyayı yeniden adlandır</string>
