--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">请授予权限以访问您的存储器</string>
     <string name="out_of_memory_error">内存不足</string>
     <string name="an_error_occurred">啊哦，出错啦: %s</string>
+    <string name="open_with">打开方式</string>
+    <string name="no_app_found">未找到可用应用</string>
 
     <!-- Renaming -->
     <string name="rename_file">重命名文件</string>
