--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Potřebuji oprávnění k přístupu na vaše úložiště</string>
     <string name="out_of_memory_error">Zařízení nemá dostatek paměti</string>
     <string name="an_error_occurred">Vyskytla se chyba: %s</string>
+    <string name="open_with">Otevřít pomocí</string>
+    <string name="no_app_found">Nebyla nalezena žádná vhodná aplikace</string>
 
     <!-- Renaming -->
     <string name="rename_file">Přejmenovat soubor</string>
