--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -8,8 +8,8 @@
     <string name="no_storage_permissions">We need the permission to access your storage</string>
     <string name="out_of_memory_error">Out of memory error</string>
     <string name="an_error_occurred">An error occurred: %s</string>
-    <string name="open_with">Open with</string>
-    <string name="no_app_found">No valid app found</string>
+    <string name="open_with">Avaa</string>
+    <string name="no_app_found">Sovelluksia ei löydetty</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rename file</string>
@@ -128,7 +128,7 @@
     <string name="whats_new_disclaimer">* only the bigger updates are listed here, there are always some smaller improvements too</string>
 
     <!-- Actionbar items -->
-    <string name="delete">Törlés</string>
+    <string name="delete">Delete</string>
     <string name="rename">Rename</string>
     <string name="share">Share</string>
     <string name="share_via">Share via</string>
@@ -197,27 +197,27 @@
     <string name="settings">Settings</string>
     <string name="customize_colors">Customize colors</string>
     <string name="show_hidden">Show hidden files and folders</string>
-    <string name="font_size">Betűméret</string>
-    <string name="small">Kicsi</string>
-    <string name="medium">Közepes</string>
-    <string name="large">Nagy</string>
-    <string name="extra_large">Óriási</string>
+    <string name="font_size">Font size</string>
+    <string name="small">Small</string>
+    <string name="medium">Medium</string>
+    <string name="large">Large</string>
+    <string name="extra_large">Extra large</string>
     <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
 
     <!-- About -->
-    <string name="about">Információ</string>
-    <string name="website_label">További egyszerű alkalmazások és a forráskód itt</string>
-    <string name="email_label">Visszajelzés és javaslatok</string>
+    <string name="about">About</string>
+    <string name="website_label">For the source codes visit</string>
+    <string name="email_label">Send your feedback or suggestions to</string>
     <string name="more_apps_underlined"><u>More apps</u></string>
-    <string name="third_party_licences_underlined"><u>Harmadik fél licenszek</u></string>
-    <string name="invite_friends_underlined"><u>Barátok meghívása</u></string>
-    <string name="share_text">Szia, ezt nézd meg! %1$s itt: %2$s</string>
-    <string name="invite_via">Meghívó küldése itt</string>
-    <string name="rate_us_underlined"><u>Értékelés</u></string>
+    <string name="third_party_licences_underlined"><u>Third party licences</u></string>
+    <string name="invite_friends_underlined"><u>Invite friends</u></string>
+    <string name="share_text">Hey, come check out %1$s at %2$s</string>
+    <string name="invite_via">Invite via</string>
+    <string name="rate_us_underlined"><u>Rate us</u></string>
     <string name="donate">Donate</string>
     <string name="donate_underlined"><u>Donate</u></string>
-    <string name="follow_us">Követés:</string>
-    <string name="copyright">%1$s verzió\nSzerzői jogok: © Simple Mobile Tools %2$d</string>
+    <string name="follow_us">Follow us:</string>
+    <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Additional info</string>
     <string name="gruveo">Are you looking for a simple and anonymous video calling app? Try out my other project</string>
     <string name="app_version">App version: %1$s</string>
@@ -225,17 +225,17 @@
     <string name="donate_please">Hey,\n\nseems like you\'ve been using this app for quite a while now.\n\nDid you know it\'s not backed by any big company? Developing it takes time and I want to keep it adfree, so your support would be appreciated.\n\nYou can support me either by buying a paid app Simple Thank You, by sending money through Paypal or by sending cryptocurrencies.\n\nMore info at http://simplemobiletools.com/donate.\n\nThank you!</string>
 
     <!-- License -->
-    <string name="notice">Ez az alkalmazás az alábbi könyvtárakat használja, hogy a munkám egyszerűbb legyen. Köszönöm szépen.</string>
-    <string name="third_party_licences">Harmadik fél licenszek</string>
-    <string name="kotlin_title">Kotlin (programozási nyelv)</string>
+    <string name="notice">This app uses the following third party libraries to make my life easier. Thank you.</string>
+    <string name="third_party_licences">Third party licences</string>
+    <string name="kotlin_title">Kotlin (programming language)</string>
     <string name="subsampling_title">Subsampling Scale Image View (zoomable imageviews)</string>
     <string name="glide_title">Glide (image loading and caching)</string>
     <string name="picasso_title">Picasso (image loading and caching)</string>
     <string name="cropper_title">Android Image Cropper (image crop and rotate)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (selecting multiple list items)</string>
     <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
-    <string name="joda_title">Joda-Time (Java dátum helyettesítérére)</string>
-    <string name="stetho_title">Stetho (adatbázisok hibakeresésére)</string>
+    <string name="joda_title">Joda-Time (Java date replacement)</string>
+    <string name="stetho_title">Stetho (debugging databases)</string>
     <string name="otto_title">Otto (event bus)</string>
     <string name="photoview_title">PhotoView (zoomable GIFs)</string>
     <string name="pattern_title">PatternLockView (pattern protection)</string>
