--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Reikalingas leidimas pasiekti saugyklà</string>
     <string name="out_of_memory_error">Klaida: trûksta atminties</string>
     <string name="an_error_occurred">Klaida: %s</string>
+    <string name="open_with">Open with</string>
+    <string name="no_app_found">No valid app found</string>
 
     <!-- Renaming -->
     <string name="rename_file">Pervadinti failà</string>
