--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">Aby mieć dostęp do plików, potrzebuję uprawnień</string>
     <string name="out_of_memory_error">Błąd pamięci</string>
     <string name="an_error_occurred">Wystąpił błąd: %s</string>
+    <string name="open_with">Otwórz w</string>
+    <string name="no_app_found">Nie znaleziono danych aplikacji</string>
 
     <!-- Renaming -->
     <string name="rename_file">Zmień nazwę</string>
