--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">我們需要權限來存取您的儲存空間</string>
     <string name="out_of_memory_error">記憶體不足</string>
     <string name="an_error_occurred">發生錯誤: %s</string>
+    <string name="open_with">以其他應用程式開啟</string>
+    <string name="no_app_found">找不到應用程式</string>
 
     <!-- Renaming -->
     <string name="rename_file">重新命名檔案</string>
