--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="no_storage_permissions">We need the permission to access your storage</string>
     <string name="out_of_memory_error">Out of memory error</string>
     <string name="an_error_occurred">An error occurred: %s</string>
+    <string name="open_with">Open with</string>
+    <string name="no_app_found">No valid app found</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rename file</string>
