adding an activity extention for handling Set As intent

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Vyskytla se chyba: %s</string>
     <string name="open_with">Otevřít pomocí</string>
     <string name="no_app_found">Nebyla nalezena žádná vhodná aplikace</string>
+    <string name="set_as">Nastavit jako</string>
 
     <!-- Renaming -->
     <string name="rename_file">Přejmenovat soubor</string>
