--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Es ist ein Fehler aufgetreten: %s</string>
     <string name="open_with">Öffnen mit</string>
     <string name="no_app_found">Keine passende App gefunden</string>
+    <string name="set_as">Festlegen als</string>
 
     <!-- Renaming -->
     <string name="rename_file">Datei umbenennen</string>
