--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Un error ocurrió: %s</string>
     <string name="open_with">Abrir con</string>
     <string name="no_app_found">No se encontró una aplicación válida</string>
+    <string name="set_as">Establecer como</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renombrar archivo</string>
