--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">An error occurred: %s</string>
     <string name="open_with">Avaa</string>
     <string name="no_app_found">Sovelluksia ei löydetty</string>
+    <string name="set_as">Aseta</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rename file</string>
