--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Une erreur est survenue: %s</string>
     <string name="open_with">Ouvrir avec</string>
     <string name="no_app_found">Aucune application valide trouvée</string>
+    <string name="set_as">Définir comme</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renommer le fichier</string>
