--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Si è verificato un errore: %s</string>
     <string name="open_with">Apri con</string>
     <string name="no_app_found">Nessun app valida trovata</string>
+    <string name="set_as">Imposta come</string>
 
     <!-- Renaming -->
     <string name="rename_file">Rinomina file</string>
