--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">エラーが発生しました: %s</string>
     <string name="open_with">別のアプリで開く</string>
     <string name="no_app_found">有効なアプリが見つかりません</string>
+    <string name="set_as">他で使う</string>
 
     <!-- Renaming -->
     <string name="rename_file">ファイルの名前を変更</string>
