--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Fout opgetreden: %s</string>
     <string name="open_with">Openen met</string>
     <string name="no_app_found">Geen app gevonden om dit bestand mee te openen</string>
+    <string name="set_as">Instellen als</string>
 
     <!-- Renaming -->
     <string name="rename_file">Bestand hernoemen</string>
