--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Wystąpił błąd: %s</string>
     <string name="open_with">Otwórz w</string>
     <string name="no_app_found">Nie znaleziono danych aplikacji</string>
+    <string name="set_as">Ustaw jako</string>
 
     <!-- Renaming -->
     <string name="rename_file">Zmień nazwę</string>
