--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Ocorreu um erro: %s</string>
     <string name="open_with">Abrir com</string>
     <string name="no_app_found">Nenhuma aplicação encontrada</string>
+    <string name="set_as">Definir como</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renomear ficheiro</string>
