--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Произошла ошибка: %s</string>
     <string name="open_with">Открыть в</string>
     <string name="no_app_found">Приложение не найдено</string>
+    <string name="set_as">Установить как</string>
 
     <!-- Renaming -->
     <string name="rename_file">Изменение имени файла</string>
