--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Došlo k chybe: %s</string>
     <string name="open_with">Otvoriť pomocou</string>
     <string name="no_app_found">Nenašla sa žiadna vhodná aplikácia</string>
+    <string name="set_as">Nastaviť ako</string>
 
     <!-- Renaming -->
     <string name="rename_file">Premenovať súbor</string>
