--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Klaida: %s</string>
     <string name="open_with">Open with</string>
     <string name="no_app_found">No valid app found</string>
+    <string name="set_as">Set as</string>
 
     <!-- Renaming -->
     <string name="rename_file">Pervadinti failà</string>
