--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Um erro ocorreu: %s</string>
     <string name="open_with">Abrir com</string>
     <string name="no_app_found">Nenhum aplicativo encontrado</string>
+    <string name="set_as">Definir como</string>
 
     <!-- Renaming -->
     <string name="rename_file">Renomear arquivo</string>
