--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Ett fel har uppstått: %s</string>
     <string name="open_with">Öppna med</string>
     <string name="no_app_found">Hittade ingen giltig app</string>
+    <string name="set_as">Ange som</string>
 
     <!-- Renaming -->
     <string name="rename_file">Döp om fil</string>
