--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">Bir hata oluştu: %s</string>
     <string name="open_with">Bununla aç</string>
     <string name="no_app_found">Geçerli bir uygulama bulunamadı</string>
+    <string name="set_as">Set as</string>
 
     <!-- Renaming -->
     <string name="rename_file">Dosyayı yeniden adlandır</string>
