--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -10,6 +10,7 @@
     <string name="an_error_occurred">發生錯誤: %s</string>
     <string name="open_with">以其他應用程式開啟</string>
     <string name="no_app_found">找不到應用程式</string>
+    <string name="set_as">設為</string>
 
     <!-- Renaming -->
     <string name="rename_file">重新命名檔案</string>
